--- a/my_flutter_project/pubspec.yaml
+++ b/my_flutter_project/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   dio: ^5.6.0
+  go_router: ^9.0.2
   flutter_riverpod: ^2.5.3
   connectivity_plus: ^6.1.0
   cached_network_image: ^3.4.1
