added firebase setup

--- a/my_flutter_project/android/app/build.gradle
+++ b/my_flutter_project/android/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id "com.android.application"
     id "kotlin-android"
+
+    // Add the Google services Gradle plugin
+    id "com.google.gms.google-services"
+
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
@@ -42,3 +46,14 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    // Import the Firebase BoM (Bill of Materials)
+    implementation platform('com.google.firebase:firebase-bom:33.5.1')
+
+    // Add Firebase dependencies here
+
+}
+
+// Apply Google services plugin at the bottom
+apply plugin: 'com.google.gms.google-services'
