--- a/my_flutter_project/pubspec.yaml
+++ b/my_flutter_project/pubspec.yaml
@@ -30,6 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dio: ^5.7.0
+  go_router: ^14.3.0
+  flutter_riverpod: ^2.6.1
+  connectivity_plus: ^6.1.0
+  cached_network_image: ^3.4.1
+  permission_handler: ^11.3.1
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.5.0
+  cloud_firestore: ^4.11.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,12 +48,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dio: ^5.7.0
-  go_router: ^14.3.0
-  flutter_riverpod: ^2.6.1
-  connectivity_plus: ^6.1.0
-  cached_network_image: ^3.4.1
-  permission_handler: ^11.3.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
