--- a/my_flutter_project/android/app/build.gradle
+++ b/my_flutter_project/android/app/build.gradle
@@ -28,7 +28,9 @@ android {
         applicationId = "com.example.my_flutter_project"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
+
+        // Use the maximum between Flutter's default minSdkVersion and 23
+        minSdkVersion Math.max(flutter.minSdkVersion, 23)
         targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
