--- a/my_flutter_project/android/app/build.gradle
+++ b/my_flutter_project/android/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.5.1')
 
     // Add Firebase dependencies here
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
 }
 
