--- a/my_flutter_project/ios/Runner/Info.plist
+++ b/my_flutter_project/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+
+	<!-- Google Sign-In Configuration -->
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>YOUR_REVERSED_CLIENT_ID</string>
+        </array>
+      </dict>
+    </array>
 </dict>
 </plist>
