--- a/my_flutter_project/pubspec.yaml
+++ b/my_flutter_project/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
+  google_sign_in: ^6.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
