--- a/my_flutter_project/pubspec.yaml
+++ b/my_flutter_project/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
   google_sign_in: ^6.2.2
+  google_maps_flutter: ^2.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
