--- a/my_flutter_project/pubspec.yaml
+++ b/my_flutter_project/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.5.3
+  sdk: ^3.7.2
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.7.0
-  go_router: ^14.6.0
+  go_router: ^15.1.1
   flutter_riverpod: ^2.6.1
   connectivity_plus: ^6.1.0
   cached_network_image: ^3.4.1
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   firebase_core: ^3.8.0
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.5.0
